[build-system]
requires = [ "setuptools>=61.0",]
build-backend = "setuptools.build_meta"

[project]
name = "set-all-seeds"
version = "0.1.1"
description = "Set all random seeds for reproducibility in Python, NumPy, and TensorFlow."
readme = "README.md"
requires-python = ">=3.7"
dependencies = [ "numpy", "tensorflow",]
[[project.authors]]
name = "Your Name"
email = "your.email@example.com"

[project.urls]
Homepage = "https://github.com/yourusername/set-all-seeds"

[tool.bumpversion]
current_version = "0.1.1"
commit = true
tag = true
tag_name = "v{new_version}"

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'

[[tool.bumpversion.files]]
filename = "setup.py"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'

[tool.bumpversion.parts.prerelease]
values = ["dev", "rc"]
